package dev.gezgin.sample.domain.model

enum class SortOrder {
  RELEVANCE,
  PRICE_ASC,
  PRICE_DESC,
}
